denoted one of the parameters as optional

--- a/api/web5-js/dwn/protocols.mdx
+++ b/api/web5-js/dwn/protocols.mdx
@@ -97,6 +97,7 @@ Configures a protocol definition in the user's local DWN, remote DWN, or another
                                                                             },
                                                                             {
                                                                               data: {
+                                                                                isOptional: true,
                                                                                 field: 'of',
                                                                                 value: 'The protocol path that refers to the record subject',
                                                                               },
