updating API docs for DID class

--- a/api/web5-js/dwn/record.mdx
+++ b/api/web5-js/dwn/record.mdx
@@ -3,7 +3,7 @@ import ApiDetails from '@site/src/components/ApiDetails';
 
 
 ## Overview
-Every modifying method of the [Records](records.mdx) class returns an instance of a `Record` object, which is a representation of the record(s) involved in the operation
+Every modifying method of the [Records](records) class returns an instance of a `Record` object, which is a representation of the record(s) involved in the operation
 
 <Divider type="slash"/>
 
