--- a/api/web5-js/dwn/records.mdx
+++ b/api/web5-js/dwn/records.mdx
@@ -8,7 +8,7 @@ The `records` class is responsible for providing convenience methods for CRUD op
 
 ### Record
 
-Every modifying method of the `records` class returns an instance of a [Record](record.mdx) object, which is a representation of the record involved in the operation
+Every modifying method of the `records` class returns an instance of a [Record](record) object, which is a representation of the record involved in the operation
 
 <Divider type="slash"/>
 
