adding Web5 as proper class name

--- a/api/web5-js/index.mdx
+++ b/api/web5-js/index.mdx
@@ -5,7 +5,7 @@ import ApiDetails from '@site/src/components/ApiDetails';
 
 
 
-# web5.js
+# Web5
 
 Web5 JS consists of the following components:
 
