adding more context to docs. issue #531

--- a/api/web5-js/did.mdx
+++ b/api/web5-js/did.mdx
@@ -56,7 +56,7 @@ const myDid = await web5.did.create('ion');
 
 ### resolve(did)
 
-Resolves a DID into a DID document by using the "read" operation of the applicable DID method
+Resolves a DID into a DID document by using the "read" operation of the applicable DID method. DIDs that are resolved are cached for a default of 15 minutes.
 
 #### Parameters
 
