added capability to label data types, issue #516

--- a/api/web5-js/index.mdx
+++ b/api/web5-js/index.mdx
@@ -94,6 +94,7 @@ Enables an app to request connection to a user's local identity app (like a desk
       data: {
         isObject: true,
         isOptional: true,
+        type: 'Web5ConnectOptions',
         field: 'options',
         value: <ApiDetails
                 details={[
@@ -101,12 +102,14 @@ Enables an app to request connection to a user's local identity app (like a desk
                     data: {
                         isObject: true,
                         isOptional: true,
+                        type: 'TechPreviewOptions',
                         field: 'techPreview',
                         value: <ApiDetails
                                 details={[
                                 {
                                     data: {
                                         isOptional: true,
+                                        type: 'string[]',
                                         field: 'dwnEndpoints',
                                         value: 'a list of DWN endpoints to define in the DID created and returned by this method. If this property is omitted during the Tech Preview, two nodes will be included by default (e.g. https://dwn.tbddev.org/dwn0, https://dwn.tbddev.org/dwn3)',
                                     },
@@ -130,12 +133,14 @@ Enables an app to request connection to a user's local identity app (like a desk
       data: {
         field: 'web5',
         value: 'A class instance of Web5 that enables access to a locally running DWN, DID interaction methods, and other capabilities related to the connected DID',
+        type: 'Web5',
       },
     },
     {
       data: {
         field: 'did',
         value: 'A class instance representing the decentralized identifier that was created or attained connection to',
+        type: 'DidApi',
       },
     },
   ]}
