added meta data

--- a/api/web5-js/index.mdx
+++ b/api/web5-js/index.mdx
@@ -1,3 +1,8 @@
+---
+title: Web5 API Reference
+description: API documentation for the Web5 JS SDK
+---
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Divider from '@site/src/components/Divider';
@@ -18,7 +23,7 @@ The SDK sets out to gather the most used functionality from all three of these p
 :::caution
 WEB5 JS SDK IS CURRENTLY IN TECH PREVIEW
 
-The SDK is currently still under active development, but having entered the Tech Preview phase there is now a drive to avoid unnecessary changes unless backwards compatibility is provided. Additional functionality will be added in the lead up to 1.0 final, and modifications will be made to address issues and community feedback.
+The SDK is currently still under active development, but having entered the Tech Preview phase, there is now a drive to avoid unnecessary changes unless backwards compatibility is provided. Additional functionality will be added in the lead up to version 1.0, and modifications will be made to address issues and community feedback.
 :::
 
 
