--- a/api/web5-js/dwn/records.mdx
+++ b/api/web5-js/dwn/records.mdx
@@ -71,6 +71,10 @@ const response = await web5.dwn.records.query({
     }
   }
 });
+  
+response.records.forEach(record => {
+    console.log(record.id);
+});
 ```
 
 <Divider type="slash"/>
